--- a/UnderWear/src/main/webapp/resources/include/css/mainheader.css
+++ b/UnderWear/src/main/webapp/resources/include/css/mainheader.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-	.carousel-inner{
+   .carousel-inner{
        margin-top:100px;
      }
      
@@ -13,16 +13,15 @@
      }
      .container{
       margin: auto;
-        width:60%;
+       width:1200px;
      }
      
      .navbar-nav{
-      width:30%; 
-      margin-left:15%; 
+      width:30%;
      }
    
    .navbar-nav:nth-child(2) {
-      width:10%; 
+      width:40%; 
       margin-left: 5%;
    }
    .navbar-nav:nth-child(2)>li>a{
@@ -33,9 +32,12 @@
       padding:0px;
       font-weight: bold;
       color:lightgray;
-      margin-top:15px;
    }
    .navbar-nav:nth-child(2)>li>a>img{
       height:25px;
       width:auto;
    }
+  /*   .navbar-nav:nth-child(2)>li:nth-child(5){
+          display:block;
+         font-size: 10px;
+   } */
